# Banking_System

./: .gitignore  CMakeLists.txt  Makefile  banking.c  bankingFunctions.c  bankingFunctions.h  bankingTest.c  userInfo.csv
banking-app/: package-lock.json  package.json
banking-app/src/: LoginPage.js  LoginPage.test.js  index.js
inc/: bankingFunctions.h
src/: banking.c  bankingFunctions.c
test/: bankingTest.c
